--- a/Landing.html
+++ b/Landing.html
@@ -32,7 +32,7 @@
         </section>
     </main>
     <footer>
-        <p>© 2023 by [Your Name]. All rights reserved.</p>
+        <p>© 2023 by Sandeep. All rights reserved.</p>
     </footer>
 </body>
 </html>
